# picovga-cmake

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DoxygenLayout.xml  GettingStarted.md  Index.md  README.md  Readme.md  UsageRules.md  Wiring.md  custom.css  doxygen.cfg  global.h  picovga.cmake
examples/: CMakeLists.txt  README.md  Readme.md
examples/vga_ants/: CMakeLists.txt
examples/vga_ants/img/: background.cpp  blacksreds.cpp  cards.cpp  castle.cpp  castle_shadow.cpp  cloud.cpp  cursor.cpp  fence.cpp  fence_shadow.cpp  flags.cpp  grass.cpp  open.cpp  open_sel.cpp  open_sel2.cpp  select.cpp  state.cpp  title.cpp  title2.cpp  trumpet.cpp  win.cpp
examples/vga_ants/snd/: applause.cpp  birds.cpp  build_castle.cpp  build_fence.cpp  card.cpp  curse.cpp  decrease_stocks.cpp  fanfares.cpp  increase_power.cpp  increase_stocks.cpp  ruin_castle.cpp  ruin_fence.cpp
examples/vga_ants/src/: game.cpp  include.h  main.cpp  main.h
examples/vga_balloons/img/: blue.cpp  clouds.cpp  green.cpp  hotair.cpp  red.cpp  yellow.cpp
examples/vga_balloons/src/: main.cpp  main.h
examples/vga_draw/: CMakeLists.txt
examples/vga_draw/src/: main.cpp  main.h
examples/vga_earth/: CMakeLists.txt
examples/vga_earth/img/: earth1.cpp  earth2.cpp
examples/vga_earth/src/: main.cpp  main.h
examples/vga_eggs/: CMakeLists.txt
examples/vga_eggs/img/: computer.cpp  frame.cpp  open.cpp  select.cpp  tiles.cpp
examples/vga_eggs/snd/: beep.cpp  beep2.cpp  fanfare.cpp  mapple.cpp
examples/vga_eggs/src/: main.cpp  main.h
examples/vga_fifteen/: CMakeLists.txt
examples/vga_fifteen/img/: tiles.cpp
examples/vga_fifteen/snd/: bump.cpp  move.cpp  shuffling.cpp
examples/vga_fifteen/src/: main.cpp  main.h
examples/vga_flag/: CMakeLists.txt
examples/vga_flag/img/: clouds.cpp  flag.cpp  mast.cpp
examples/vga_flag/src/: main.cpp  main.h
examples/vga_ghostracing/: CMakeLists.txt
examples/vga_ghostracing/img/: car1.cpp  car2.cpp  car3.cpp  ghost1.cpp  ghost2.cpp  ghost3.cpp  ghost4.cpp  skyline.cpp  tiles.cpp
examples/vga_ghostracing/snd/: engine.cpp
examples/vga_ghostracing/src/: main.cpp  main.h
examples/vga_gingerhouse/: CMakeLists.txt
examples/vga_gingerhouse/img/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  22.cpp
examples/vga_gingerhouse/src/: main.cpp  main.h
examples/vga_hello/: CMakeLists.txt
examples/vga_hello/src/: include.h  main.cpp
examples/vga_hypno/: CMakeLists.txt
examples/vga_hypno/src/: main.cpp  main.h
examples/vga_levelmeter/: CMakeLists.txt
examples/vga_levelmeter/img/: repro1.cpp  repro2.cpp  repro3.cpp
examples/vga_levelmeter/snd/: test.cpp
examples/vga_levelmeter/src/: main.cpp  main.h
examples/vga_life/: CMakeLists.txt
examples/vga_life/img/: tiles16.cpp
examples/vga_life/src/: main.cpp  main.h
examples/vga_lines/: CMakeLists.txt
examples/vga_lines/src/: main.cpp  main.h
examples/vga_mandelbrot/: CMakeLists.txt
examples/vga_mandelbrot/src/: fixed.h  main.cpp  main.h
examples/vga_matrixrain/: CMakeLists.txt
examples/vga_matrixrain/src/: main.cpp  main.h
examples/vga_maze/: CMakeLists.txt
examples/vga_maze/img/: tiles.cpp
examples/vga_maze/src/: main.cpp  main.h
examples/vga_monoscope/: CMakeLists.txt
examples/vga_monoscope/img/: monoscope_1024x576.cpp  monoscope_1024x768.cpp  monoscope_1064x600.cpp  monoscope_1152x864.cpp  monoscope_1280x960.cpp  monoscope_1360x768.cpp  monoscope_256x192.cpp  monoscope_300x240.cpp  monoscope_320x200.cpp  monoscope_320x240.cpp  monoscope_360x288.cpp  monoscope_384x288.cpp  monoscope_400x300.cpp  monoscope_424x240.cpp  monoscope_500x400.cpp  monoscope_512x288.cpp  monoscope_528x400.cpp  monoscope_600x480.cpp  monoscope_640x400.cpp  monoscope_640x480.cpp  monoscope_704x400.cpp  monoscope_720x576.cpp  monoscope_768x576.cpp  monoscope_800x600.cpp  monoscope_848x480.cpp  pi-monoscope.cpp
examples/vga_monoscope/src/: main.cpp  main.h
examples/vga_oscilloscope/: CMakeLists.txt
examples/vga_oscilloscope/img/: grid.cpp  oscilA.cpp  oscilB1.cpp  oscilB2.cpp  oscilC1.cpp  oscilC2.cpp  oscilD.cpp
examples/vga_oscilloscope/src/: main.cpp  main.h
examples/vga_pacman/: CMakeLists.txt
examples/vga_pacman/img/: logo.cpp  sprites.cpp  status.cpp  tiles.cpp
examples/vga_pacman/snd/: death.cpp  eatfruit.cpp  eatghost.cpp  extrapac.cpp  frighten.cpp  intermission.cpp  siren.cpp  startsnd.cpp  wakka.cpp
examples/vga_pacman/src/: data.cpp  data.h  game.cpp  game.h  main.cpp  main.h  open.cpp
examples/vga_pi/: CMakeLists.txt
examples/vga_pi/src/: main.cpp
examples/vga_pixels/: CMakeLists.txt
examples/vga_pixels/src/: main.cpp
examples/vga_raytrace/: CMakeLists.txt
examples/vga_raytrace/src/: main.cpp  main.h  render.cpp  render.h  sphere.h  vector.h
examples/vga_sokoban/: CMakeLists.txt
examples/vga_sokoban/img/: tiles12.cpp  tiles16.cpp  tiles20.cpp  tiles24.cpp  tiles28.cpp  tiles32.cpp  tiles8.cpp
examples/vga_sokoban/snd/: yippee.cpp
examples/vga_sokoban/src/: game.cpp  game.h  levels.cpp  levels_damgaard.cpp  levels_domenech.cpp  levels_dzekic.cpp  levels_grigor.cpp  levels_haywood.cpp  levels_holland.cpp  levels_loma.cpp  levels_martel.cpp  levels_murase.cpp  levels_peloux.cpp  levels_rabbit.cpp  levels_skinner.cpp  levels_sladkey.cpp  main.cpp  main.h  select.cpp  select.h
examples/vga_spheres/: CMakeLists.txt
examples/vga_spheres/src/: main.cpp
examples/vga_spots/: CMakeLists.txt
examples/vga_spots/src/: main.cpp
examples/vga_tetris/: CMakeLists.txt
examples/vga_tetris/img/: tiles.cpp
examples/vga_tetris/snd/: brick.cpp  gameover.cpp  levelup.cpp  line.cpp
examples/vga_tetris/src/: main.cpp  main.h
examples/vga_train/: CMakeLists.txt
examples/vga_train/img/: tiles.cpp
examples/vga_train/snd/: collect.cpp  crash.cpp  step.cpp  success.cpp
examples/vga_twister/: CMakeLists.txt
examples/vga_watersurface/: CMakeLists.txt
src/: define.h  (+10 more)
tools/src/: CMakeLists.txt  picovga_img.cpp  picovga_pal332.cpp  picovga_rle.cpp  picovga_snd.cpp
(+578 files in other folders)
