#add_subdirectory(vga_ants)
add_subdirectory(vga_balloons)
#add_subdirectory(vga_draw)
#add_subdirectory(vga_earth)
#add_subdirectory(vga_eggs)
#add_subdirectory(vga_fifteen)
#add_subdirectory(vga_flag)
#add_subdirectory(vga_ghostracing)
#add_subdirectory(vga_gingerhouse)
add_subdirectory(vga_hello)
#add_subdirectory(vga_hypno)
#add_subdirectory(vga_levelmeter)
#add_subdirectory(vga_life)
#add_subdirectory(vga_lines)
#add_subdirectory(vga_mandelbrot)
#add_subdirectory(vga_matrixrain)
#add_subdirectory(vga_maze)
#add_subdirectory(vga_monoscope)
#add_subdirectory(vga_oscilloscope)
#add_subdirectory(vga_pacman)
#add_subdirectory(vga_pi)
#add_subdirectory(vga_pixels)
#add_subdirectory(vga_raytrace)
#add_subdirectory(vga_sokoban)
#add_subdirectory(vga_spheres)
#add_subdirectory(vga_spots)
#add_subdirectory(vga_tetris)
#add_subdirectory(vga_train)
#add_subdirectory(vga_twister)
#add_subdirectory(vga_watersurface)
